--- a/Strona główna.html
+++ b/Strona główna.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memy</title>
     <link rel="icon" href="Ikona.png" sizes="32x32" type="image/png">
-    <link rel="stylesheet" href="../css/style - index.css">
+    <link rel="stylesheet" href="style - index.css">
 </head>
 <body>
     <div id="header">
